addons/care_config_relaunch_v2/static/src/css/care_relaunch_v2.css
/* ... */
/* latin */
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 700;
  font-stretch: 100%;
  font-display: swap;
  src: url(/care_config_relaunch_v2/static/src/fonts/OpenSans/OpenSans-latin-bold.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

/* latin-ext */
@font-face {
  font-family: 'Fira Sans Condensed';
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: url(/care_config_relaunch_v2/static/src/fonts/FiraSans/FiraSans-ext-condensed-bold.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}

/* latin */
@font-face {
  font-family: 'Fira Sans Condensed';
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: url(/care_config_relaunch_v2/static/src/fonts/FiraSans/FiraSans-condensed-bold.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

/* latin-ext */
@font-face {
  font-family: 'Fira Sans Condensed';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(/care_config_relaunch_v2/static/src/fonts/FiraSans/FiraSans-ext-condensed-regular.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}

/* latin */
@font-face {
  font-family: 'Fira Sans Condensed';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(/care_config_relaunch_v2/static/src/fonts/FiraSans/FiraSans-condensed-regular.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

/* latin-ext */
@font-face {
  font-family: 'Merriweather';
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: url(/care_config_relaunch_v2/static/src/fonts/Merriweather/Merriweather-ext-bold.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Merriweather';
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: url(/care_config_relaunch_v2/static/src/fonts/Merriweather/Merriweather-bold.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

/* Base fonts */
*:not(.glyphicon) {
    font-family: 'Open Sans';
}

*:not(.glyphicon),
input[type=text],
select,
select.form-control,
#website_sale_donate label.control-label:not(.un-focused):not(.is-focused),
#website_sale_donate label.control-label.empty:not(.is-focused),
#website_sale_donate input[type=button].price_donate_suggested,
#website_sale_donate input[type=number],
#wsd_checkout_form label.control-label:not(.un-focused):not(.is-focused),
#wsd_checkout_form label.control-label.empty:not(.is-focused),
#wsd_checkout_form input[type=button].price_donate_suggested,
#wsd_checkout_form input[type=number],
.payment_opc_acquirer_form label.control-label:not(.un-focused):not(.is-focused),
.payment_opc_acquirer_form label.control-label.empty:not(.is-focused),
.payment_opc_acquirer_form input[type=button].price_donate_suggested,
.payment_opc_acquirer_form input[type=number],
span.price_donate_suggested_currency,
.price_donate span.input-group-addon,
.btn.btn-default {
    color: #222;
}

/* Bootstrap buttons */

a.btn {
    font-family: 'Fira Sans Condensed' !important;
    font-weight: bold;
    font-stretch: condensed;
    font-size: 18px;
    letter-spacing: 1.1px;
    border-radius: 5px;
    padding: 18px !important;
}

.btn.btn-primary,
.btn.btn-primary span {
    color: white;
}

body .oe_website_sale .row .row .col-md-12 {
    float: inherit;
}

/* GENERAL END */

/* PRODUCT CARDS AND GRID START */
#products_grid.col-md-8 td,
#products_grid > table {
    border-spacing: 0px !important;
}

body #products_grid.col-md-8 {
    padding-left: 15px !important;
    padding-right: 15px !important;
}

#products_grid > table > tbody > tr > td.oe_product.oe_grid {
    padding: 1rem;
}

td.oe_product.oe_grid.oe-height-2 {
    height: 552px !important;
}

@media (max-width: 768px) {
    #products_grid .oe_product_cart {
        height: 552px !important;
    }
}

div.oe_product_cart {
    background-color: #EEE9E5;
    border-radius: 10px;
    padding: 2rem;
}

#products_grid td.oe_product.oe_grid section {
    background-color: transparent;
    padding: 2rem;
    height: 300px;
    justify-content: start;
}

#products_grid td.oe_product.oe_grid section h5 {
    word-break: break-word;
}

#products_grid td.oe_product.oe_grid section h5 a {
    font-family: 'Merriweather';
    font-size: 30px;
    font-weight: bold;
    font-stretch: normal;
    font-style: normal;
    line-height: 1.2;
    letter-spacing: normal;
    color: #222;
    text-decoration: none;
}

#products_grid div.text-info.oe_subdescription div {
    font-family: 'Fira Sans Condensed';
    font-size: 18px;
    font-weight: normal;
    font-stretch: condensed;
    font-style: normal;
    line-height: 1.44;
    letter-spacing: normal;
    color: #222;
}

div#products_grid_before {
    width: 100%;
    padding: 30px !important;
    box-shadow: none;
    float: left !important;
}

div#products_grid {
    width: 100%;
}

#products_grid > table > tbody > tr > td > div > form > div > div.wrap_wsd_1 > div.wrap_wsd_2.front > div > a > img {
    width: 100%;
    max-width: 170px;
    max-height: auto !important;
    height: auto;
}
/* ... */

